# agent-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  compose.yml  deny.toml  release-plz.toml
crates/agent-sdk/: CHANGELOG.md  COOKBOOK.md  Cargo.toml  README.md
crates/agent-sdk-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/agent-sdk-cli/embedded/: LANGFUSE.md
crates/agent-sdk-cli/embedded/langfuse/: otel-collector.yaml
crates/agent-sdk-cli/src/: commands.rs  embed.rs  main.rs
crates/agent-sdk-cli/src/commands/: agent.rs  doctor.rs  local_langfuse.rs
crates/agent-sdk-cli/tests/: init_smoke.rs
crates/agent-sdk-core/: CHANGELOG.md  Cargo.toml
crates/agent-sdk-core/src/: audit.rs  events.rs  lib.rs  llm.rs  privacy.rs  types.rs
crates/agent-sdk-core/src/privacy/: redaction.rs
crates/agent-sdk-core/tests/: test_substrate.rs
crates/agent-sdk-core/tests/snapshots/: test_substrate__agent_event_start_serializes_to_stable_shape.snap
crates/agent-sdk-foundation/: CHANGELOG.md  Cargo.toml  README.md
crates/agent-sdk-foundation/src/: audit.rs  events.rs  lib.rs  llm.rs  privacy.rs  types.rs
crates/agent-sdk-foundation/src/privacy/: redaction.rs
crates/agent-sdk-foundation/tests/: test_substrate.rs
crates/agent-sdk-foundation/tests/snapshots/: test_substrate__agent_event_start_serializes_to_stable_shape.snap
crates/agent-sdk-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/agent-sdk-macros/src/: attr.rs  lib.rs  tool_derive.rs  tool_name_derive.rs  typed_tool_derive.rs
crates/agent-sdk-otel/: CHANGELOG.md  Cargo.toml  README.md
crates/agent-sdk-otel/src/: config.rs  grpc.rs  lib.rs  propagator.rs  resource.rs  sampler.rs
crates/agent-sdk-otel/tests/: install.rs  propagator.rs
crates/agent-sdk-providers/: CHANGELOG.md  Cargo.toml  README.md
crates/agent-sdk-providers/src/: attachments.rs  fallback.rs  http.rs  impls.rs  lib.rs  model_capabilities.rs  model_catalog.rs  model_features.rs  provider.rs  record_replay.rs  refresh.rs  retry_hints.rs  router.rs  streaming.rs  structured.rs
crates/agent-sdk-providers/src/impls/: anthropic.rs  cloudflare_ai_gateway.rs  gemini.rs  mod.rs  model_listing.rs  openai.rs  openai_codex_responses.rs  openai_reasoning.rs  openai_responses.rs  openai_schema.rs  vertex.rs
crates/agent-sdk-providers/src/model_catalog/: modelsdev.rs  openrouter.rs  registry.rs
crates/agent-sdk-providers/tests/: provider_tiers.rs
crates/agent-sdk-providers/tests/cassettes/: anthropic_text.sse  anthropic_text_and_tool.sse  anthropic_tool_truncated.sse  anthropic_tool_use.sse
crates/agent-sdk-tools/: CHANGELOG.md  Cargo.toml  README.md
crates/agent-sdk-tools/src/: audit.rs  authority.rs  environment.rs  hooks.rs  lib.rs  seed.rs  stores.rs  tools.rs
crates/agent-sdk/docs/observability/: GRAFANA.md  LANGFUSE.md  OBSERVABILITY_INVENTORY.md  PHASE_9_INVENTORY.md
crates/agent-sdk/examples/: basic_agent.rs  custom_hooks.rs  custom_tool.rs  derive_tool.rs  mcp_filesystem.rs  mcp_http_remote.rs  otel.rs  server_turn_summary.rs  streaming.rs  structured_output.rs  tool_round_trip.rs  typed_tool.rs  with_primitive_tools.rs
crates/agent-sdk/src/: agent_loop.rs  authority.rs  builtin_tools.rs  capabilities.rs  context.rs  environment.rs  events.rs  filesystem.rs  hooks.rs  lib.rs  llm.rs  mcp.rs  model_capabilities.rs  observability.rs  pricing.rs  providers.rs  reminders.rs  seed.rs  skills.rs  stores.rs  subagent.rs  todo.rs  tools.rs  types.rs  user_interaction.rs  web.rs
crates/agent-sdk/src/agent_loop/: budget.rs  builder.rs  helpers.rs  idempotency.rs  listen.rs  llm.rs  run_loop.rs  test_utils.rs  tests.rs  tool_execution.rs  turn.rs  types.rs
crates/agent-sdk/src/context/: compactor.rs  config.rs  estimator.rs
crates/agent-sdk/src/llm/: streaming.rs  types.rs
crates/agent-sdk/src/mcp/: client.rs  http.rs  protocol.rs  tool_bridge.rs  transport.rs
crates/agent-sdk/src/observability/: attrs.rs  baggage.rs  context.rs  instrument.rs  langfuse.rs  loop_instrument.rs  metrics.rs  payload.rs  payload_capture.rs  spans.rs  trace_io.rs  types.rs
crates/agent-sdk/src/primitive_tools/: bash.rs  edit.rs  glob.rs  grep.rs  read.rs  write.rs
crates/agent-sdk/src/providers/: anthropic.rs
crates/agent-sdk/src/skills/: loader.rs  parser.rs
crates/agent-sdk/src/stores/: sqlite.rs
crates/agent-sdk/src/subagent/: factory.rs
crates/agent-sdk/src/web/: fetch.rs  provider.rs  security.rs
crates/agent-sdk/tests/: cancel_async_listen_timeout.rs  cancel_lifecycle_matrix.rs  cancel_llm_streaming.rs  cancel_mid_tool.rs  ergonomics.rs  facade_reexports.rs  macro_ergonomics.rs  macro_ui.rs  mcp_http_transport.rs  observability_conformance.rs  observability_integration.rs  panic_isolation.rs  structured_output.rs  typed_tool_validation.rs
crates/agent-sdk/tests/support/: harness.rs  stub_provider.rs
crates/agent-server/: Cargo.toml  EVENT_CONTRACT.md
crates/agent-server-loom/: Cargo.toml
crates/agent-server-loom/src/: lib.rs
crates/agent-server-loom/tests/: loom_models.rs
crates/agent-server/src/: failpoints.rs  journal.rs  lib.rs  observability.rs  worker.rs
crates/agent-server/tests/: server_metrics.rs
crates/agent-service-host/: Cargo.toml  README.md  build.rs
crates/agent-service-host/examples/: with_builtin_tools_v2.rs
crates/agent-service-host/notes/: future_event_outbox_notes.sql
crates/agent-service-host/proto/: README.md
crates/agent-service-host/src/: broker.rs  collector_event_store.rs  config.rs  conformance.rs  durability_suite.rs  ga_regression.rs  grpc.rs  health.rs  host.rs  http_health.rs  journal_conformance.rs  lib.rs  main.rs  metrics.rs  migration_contract.rs  observability.rs  postgres.rs  proto.rs  registry_tool_executor.rs  relay.rs  runtime.rs  sqlite.rs  stores.rs  wakeup.rs  watch.rs
crates/agent-service-host/tests/: awaiting_question_crash.rs  host_metrics.rs  host_observability.rs  registry_tool_executor.rs
crates/agent-service-proto/: Cargo.toml  build.rs
crates/agent-service-proto/src/: lib.rs
(+594 files in other folders)
