[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["crates/agent-service-proto"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
agent-sdk-core = { path = "crates/agent-sdk-core", version = "0.8.0" }
agent-sdk-tools = { path = "crates/agent-sdk-tools", version = "0.8.0" }
agent-sdk-providers = { path = "crates/agent-sdk-providers", version = "0.8.0" }
agent-sdk = { path = "crates/agent-sdk", version = "0.8.0" }
agent-sdk-otel = { path = "crates/agent-sdk-otel", version = "0.8.0" }
agent-server = { path = "crates/agent-server", version = "0.8.0" }
agent-service-host = { path = "crates/agent-service-host", version = "0.8.0" }
tokio = { version = "1.52.0", features = ["sync", "fs", "process", "time", "macros"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tonic-health = "0.14.5"
tower = { version = "0.5", default-features = false }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
regex = { version = "1.12.3", default-features = false, features = ["std", "unicode-perl"] }
glob = { version = "0.3", default-features = false }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "std", "formatting", "parsing"] }
reqwest = { version = "0.13.2", features = ["gzip", "json", "query", "default-tls", "stream", "http2"], default-features = false }
async-stream = "0.3"
bytes = "1"
log = { version = "0.4", features = ["kv_std"] }
url = "2"
tokio-util = "0.7"
html2text = "0.16.7"
base64 = "0.22"
tokio-tungstenite = { version = "0.29.0", features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "migrate", "macros", "time", "json"] }
lapin = { version = "4.4.0", default-features = false, features = ["rustls", "tokio"] }

# dev
tempfile = "3"
env_logger = "0.11"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
