[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["crates/agent-service-proto"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
agent-sdk-core = { path = "crates/agent-sdk-core", version = "0.8.0" }
agent-sdk-tools = { path = "crates/agent-sdk-tools", version = "0.8.0" }
# `default-features = false` here lets each consumer (notably the `agent-sdk`
# façade) decide which provider impls compile. Crates that only use the
# `LlmProvider` trait / streaming types pull no concrete provider at all.
agent-sdk-providers = { path = "crates/agent-sdk-providers", version = "0.8.0", default-features = false }
agent-sdk = { path = "crates/agent-sdk", version = "0.8.0" }
agent-sdk-otel = { path = "crates/agent-sdk-otel", version = "0.8.0" }
agent-server = { path = "crates/agent-server", version = "0.8.0" }
agent-service-host = { path = "crates/agent-service-host", version = "0.8.0" }
tokio = { version = "1.52.0", features = ["sync", "fs", "process", "time", "macros"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tonic-health = "0.14.5"
tower = { version = "0.5", default-features = false }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `serde_yaml` (0.9.34+deprecated) is unmaintained. It is being phased out:
# the `agent-sdk` skills loader now uses the maintained `serde_yaml_ng` fork
# behind the `skills` feature. The remaining use is the internal,
# unpublished `agent-service-host` config/broker plumbing (not part of the
# public `agent-sdk` dependency tree); migrating it is tracked as follow-up.
serde_yaml = "0.9"
# Maintained, API-compatible successor to the deprecated `serde_yaml`.
# Used only behind the `agent-sdk` `skills` feature (YAML frontmatter parsing).
serde_yaml_ng = "0.10"
anyhow = "1"
thiserror = "2"
regex = { version = "1.12.3", default-features = false, features = ["std", "unicode-perl"] }
glob = { version = "0.3", default-features = false }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "std", "formatting", "parsing"] }
reqwest = { version = "0.13.2", features = ["gzip", "json", "query", "default-tls", "stream", "http2"], default-features = false }
async-stream = "0.3"
bytes = "1"
log = { version = "0.4", features = ["kv_std"] }
url = "2"
tokio-util = "0.7"
html2text = "0.17.1"
base64 = "0.22"
tokio-tungstenite = { version = "0.29.0", features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
opentelemetry = { version = "0.32", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "migrate", "macros", "time", "json"] }
lapin = { version = "4.4.0", default-features = false, features = ["rustls", "tokio"] }
clap = { version = "4", features = ["derive"] }

# dev
tempfile = "3"
env_logger = "0.11"
proptest = "1"
proptest-state-machine = "0.4"
insta = { version = "1", features = ["json"] }
# Exhaustive concurrency-permutation model checker. Only
# compiled under `RUSTFLAGS="--cfg loom"`; never part of a normal build.
loom = "0.7"
# Provider Tier-B deterministic integration tests: a local HTTP server
# that replays scripted / recorded-and-redacted SSE fixtures (cassettes)
# so the streaming decode + accumulate path is exercised end-to-end with
# zero live network and zero API keys.  `wiremock` is HTTP-client-version
# agnostic (it is just a server), so it composes with the SDK's
# `reqwest 0.13` provider clients without a second reqwest in the tree.
wiremock = "0.6"

# Crash-injection failpoints (tikv `fail-rs`). Kept out of the default
# feature set on every crate so production builds never compile it in;
# `fail_point!` is a no-op unless a crate's `failpoints` feature pulls
# this in with its own `failpoints` feature enabled.
fail = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"
# `loom` is a custom cfg set only by `RUSTFLAGS="--cfg loom"` for the
# scoped concurrency models in the `agent-server-loom` crate. Declared
# here so a normal build does not warn (and `-D warnings` does not error)
# on the `#![cfg(loom)]` gate in that crate's loom test.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
