[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["crates/agent-service-proto"]

[workspace.package]
edition = "2024"
license = "MIT"
# Minimum Supported Rust Version, pinned so `cargo`, the pinned-toolchain CI
# job, and crates.io all enforce/record it. Bumping it is a semver-relevant
# change.
#
# NOTE: the Phase-13 card nominated 1.85 (the 2024-edition floor), but the
# *actual* buildable floor is higher and verified empirically:
#   * the merged 13·C MCP transport uses `Duration::from_mins(..)` in a
#     `const`, which only became a const fn in Rust 1.91;
#   * dependency floors (`time 0.3.47`, `tonic 0.14.5`) already require ≥1.88.
# 1.90 fails to compile `agent-sdk`; 1.91 builds the whole publishable set
# clean. We pin the honest, green floor rather than an aspirational 1.85 that
# the code can no longer meet. Lowering it back toward 1.85 would mean
# refactoring the 13·C `const` and pinning older dep releases — tracked as a
# follow-up if a lower MSRV becomes a requirement.
rust-version = "1.91"
repository = "https://github.com/bipa-app/agent-sdk"
homepage = "https://github.com/bipa-app/agent-sdk"
authors = ["Bipa <engineering@bipa.app>"]

[workspace.dependencies]
agent-sdk-foundation = { path = "crates/agent-sdk-foundation", version = "0.15.0" }
agent-sdk-tools = { path = "crates/agent-sdk-tools", version = "0.15.0" }
# Phase 13·E ergonomics macros (`#[derive(Tool)]` / `#[derive(TypedTool)]`,
# `tool!`, `#[derive(ToolName)]`). Re-exported from the `agent-sdk` façade so
# consumers never depend on this crate directly. COORDINATION (13·D): this is
# a new workspace member + manifest; 13·D edits packaging/CI metadata — both
# are additive and reconcile at merge.
agent-sdk-macros = { path = "crates/agent-sdk-macros", version = "0.15.0" }
# `default-features = false` here lets each consumer (notably the `agent-sdk`
# façade) decide which provider impls compile. Crates that only use the
# `LlmProvider` trait / streaming types pull no concrete provider at all.
agent-sdk-providers = { path = "crates/agent-sdk-providers", version = "0.15.0", default-features = false }
agent-sdk = { path = "crates/agent-sdk", version = "0.15.0" }
agent-sdk-otel = { path = "crates/agent-sdk-otel", version = "0.15.0" }
agent-server = { path = "crates/agent-server", version = "0.8.0" }
agent-service-host = { path = "crates/agent-service-host", version = "0.8.0" }
tokio = { version = "1.52.0", features = ["sync", "fs", "process", "time", "macros"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tonic-health = "0.14.5"
tower = { version = "0.5", default-features = false }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# JSON Schema validation for structured / typed output (Phase 13). Default
# features pull in HTTP/file `$ref` resolution (and a second reqwest);
# structured output validates self-contained schemas locally, so those are
# disabled. NOTE (coordination): Phase 13·B may also reference this entry for
# typed tool-argument validation — keep the version/feature set in sync at
# merge.
jsonschema = { version = "0.46", default-features = false }
# `serde_yaml` (0.9.34+deprecated) is unmaintained. It is being phased out:
# the `agent-sdk` skills loader now uses the maintained `serde_yaml_ng` fork
# behind the `skills` feature. The remaining use is the internal,
# unpublished `agent-service-host` config/broker plumbing (not part of the
# public `agent-sdk` dependency tree); migrating it is tracked as follow-up.
serde_yaml = "0.9"
# Maintained, API-compatible successor to the deprecated `serde_yaml`.
# Used only behind the `agent-sdk` `skills` feature (YAML frontmatter parsing).
serde_yaml_ng = "0.10"
anyhow = "1"
thiserror = "2"
regex = { version = "1.12.3", default-features = false, features = ["std", "unicode-perl"] }
glob = { version = "0.3", default-features = false }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "std", "formatting", "parsing"] }
# Use one native TLS stack across HTTP, WebSocket, AMQP, and SQLx clients.
# Reqwest's `default-tls` selects AWS-LC in 0.13, adding a large native build
# even for SQLite-only service hosts.
reqwest = { version = "0.13.2", features = ["gzip", "json", "query", "native-tls", "stream", "http2"], default-features = false }
# Exists solely so provider error classification can `downcast_ref` into
# reqwest's error chain; the downcast only matches while this resolves to the
# same semver-compatible native-tls release reqwest links. If the versions
# ever diverge, TLS policy rejections stop classifying as bounded errors
# (`tls_certificate_rejection_is_bounded_server_error` pins this).
native-tls = "0.2"
async-stream = "0.3"
bytes = "1"
log = { version = "0.4", features = ["kv_std"] }
url = "2"
tokio-util = "0.7"
html2text = "0.17.1"
base64 = "0.22"
tokio-tungstenite = { version = "0.29.0", features = ["connect", "handshake", "native-tls"] }
opentelemetry = { version = "0.32", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-native-tls", "migrate", "macros", "time", "json"] }
# Lightweight, synchronous SQLite driver for the embedded single-file durable
# session store (`agent-sdk`'s `sqlite` feature). The `bundled` feature compiles
# a vendored SQLite amalgamation so consumers need no system SQLite. Calls are
# wrapped in `spawn_blocking` since the driver is synchronous; this keeps the
# SDK's default build off the heavier async `sqlx` stack.
rusqlite = { version = "0.39", default-features = false, features = ["bundled"] }
lapin = { version = "4.4.0", default-features = false, features = ["native-tls", "tokio"] }
clap = { version = "4", features = ["derive"] }

# Proc-macro toolchain for the Phase 13·E ergonomics crate
# (`agent-sdk-macros`). `syn` pulls the full grammar so derives can read
# generics, where-clauses, and attribute exprs; `#[tool(...)]` attributes are
# parsed by hand with `syn` (rather than a third-party attribute-derive crate
# whose generated code trips the workspace's `-D warnings` clippy lints).
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
# Optional JSON-Schema derivation from a typed `Input` — the opt-in sugar over
# 13·B's user-declared-JSON baseline (`#[tool(schema = "derive")]`). Kept
# behind the macro crate's `schema-derive` feature so the baseline pulls no
# extra deps.
schemars = "1"

# dev
tempfile = "3"
env_logger = "0.11"
proptest = "1"
proptest-state-machine = "0.4"
insta = { version = "1", features = ["json"] }
# Exhaustive concurrency-permutation model checker. Only
# compiled under `RUSTFLAGS="--cfg loom"`; never part of a normal build.
loom = "0.7"
# Provider Tier-B deterministic integration tests: a local HTTP server
# that replays scripted / recorded-and-redacted SSE fixtures (cassettes)
# so the streaming decode + accumulate path is exercised end-to-end with
# zero live network and zero API keys.  `wiremock` is HTTP-client-version
# agnostic (it is just a server), so it composes with the SDK's
# `reqwest 0.13` provider clients without a second reqwest in the tree.
wiremock = "0.6"
# Compile-fail / UI tests for the proc-macros: asserts that a derive with a
# missing required attribute fails to compile with a helpful diagnostic.
trybuild = "1"

# Crash-injection failpoints (tikv `fail-rs`). Kept out of the default
# feature set on every crate so production builds never compile it in;
# `fail_point!` is a no-op unless a crate's `failpoints` feature pulls
# this in with its own `failpoints` feature enabled.
fail = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"
# `loom` is a custom cfg set only by `RUSTFLAGS="--cfg loom"` for the
# scoped concurrency models in the `agent-server-loom` crate. Declared
# here so a normal build does not warn (and `-D warnings` does not error)
# on the `#![cfg(loom)]` gate in that crate's loom test.
# `docsrs` is set only by docs.rs (and our `cargo doc` gate) to switch on the
# nightly `doc(cfg(...))` feature badges. Declared here so a normal build does
# not warn (and `-D warnings` does not error) on the `#![cfg_attr(docsrs, …)]`
# gates in the feature-gated crates.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(docsrs)'] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
