[package]
name = "agent-sdk-cli"
version = "0.8.0"
edition.workspace = true
license-file = "../../LICENSE"
publish = false
description = "Developer-experience CLI for the Agent SDK (e.g. installs the local Langfuse + OTel collector stack)"
keywords = ["agent", "llm", "cli", "observability", "langfuse"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agent-sdk"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
