[package]
name = "agent-sdk-cli"
version = "0.8.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Developer-experience CLI for the Agent SDK (e.g. installs the local Langfuse + OTel collector stack)"
keywords = ["agent", "llm", "cli", "observability", "langfuse"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "agent-sdk"
path = "src/main.rs"

[dependencies]
agent-sdk = { workspace = true, features = ["openai", "gemini", "vertex", "cloudflare"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
