[package]
name = "agent-sdk-cli"
version = "0.11.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Developer-experience CLI for the Agent SDK (e.g. installs the local Langfuse + OTel collector stack)"
readme = "README.md"
keywords = ["agent", "llm", "cli", "observability", "langfuse"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "agent-sdk"
path = "src/main.rs"
# The binary target shares the `agent-sdk` name with the library crate, so both
# rustdoc to target/doc/agent_sdk/ — an order-dependent "output filename
# collision" that aborts `cargo doc --workspace` under `-D warnings`. Binaries
# don't need rustdoc output, so exclude this one to make the collision impossible.
doc = false

[dependencies]
agent-sdk = { workspace = true, features = ["openai", "gemini", "vertex", "cloudflare"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
