[package]
name = "agent-sdk-core"
version = "0.9.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared contract types for the Agent SDK (IDs, events, LLM messages, turn outcomes)"
keywords = ["agent", "llm", "ai", "types"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = { workspace = true }
proptest-state-machine = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
