[package]
name = "agent-sdk-macros"
version = "0.11.6"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
# Publishable: the `agent-sdk` façade has a hard dependency on this crate, so
# it must be on crates.io for `agent-sdk` to publish. release-plz publishes it
# before `agent-sdk` in dependency order.
description = "Ergonomic derive/declarative macros for the Agent SDK (#[derive(Tool)], #[derive(TypedTool)], tool!, #[derive(ToolName)])"
readme = "README.md"
keywords = ["agent", "llm", "ai", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

# docs.rs builds every feature and turns on the `--cfg docsrs` feature-badge
# annotations, matching the other published crates.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[features]
# Auto-derive a tool's JSON `input_schema` from its typed `Input` via
# `schemars` (the opt-in `#[tool(schema = "derive")]` sugar). Off by default
# so the baseline derive pulls no schema-generation deps; the `agent-sdk`
# façade turns it on through its own `macros-schema` feature.
default = []
schema-derive = []

[lints]
workspace = true

# Macros are exercised end-to-end against the real traits in the `agent-sdk`
# façade (a proc-macro crate cannot depend on the crate that re-exports it),
# so this crate has no test targets of its own. The integration tests, the
# `derive_tool` example, and the `trybuild` compile-fail UI tests all live in
# `crates/agent-sdk`.
