[package]
name = "agent-sdk-providers"
version = "0.9.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "LLM provider trait, streaming primitives, and first-party provider implementations for the Agent SDK"
readme = "README.md"
keywords = ["agent", "llm", "anthropic", "openai", "gemini"]
categories = ["api-bindings", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
agent-sdk-foundation = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
# WebSocket transport — only the OpenAI Codex / ChatGPT provider needs it,
# so it is gated behind the `openai-codex` feature.
tokio-tungstenite = { workspace = true, optional = true }

[features]
# Anthropic is the default provider so the common case works out of the box.
default = ["anthropic"]
anthropic = []
openai = []
# The Codex / ChatGPT provider speaks WebSocket; gate the transport dep here.
openai-codex = ["dep:tokio-tungstenite"]
gemini = []
# The Vertex provider reuses the Anthropic model constants and the Gemini
# request/response codec, so it requires both of those providers.
vertex = ["anthropic", "gemini"]
# The Cloudflare AI Gateway provider is a thin proxy that wraps the
# Anthropic, OpenAI, and Gemini providers, so it requires all three.
cloudflare = ["anthropic", "openai", "gemini"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
wiremock = { workspace = true }
# Tier-C live smoke constructs a `Tool` whose `tier` is the core
# `ToolTier` enum (not re-exported through the `llm` glob).
agent-sdk-foundation = { workspace = true }

[lints]
workspace = true
