[package]
name = "agent-sdk"
version = "0.8.0"
edition.workspace = true
license-file = "../../LICENSE"
publish = false
description = "Rust Agent SDK for building LLM agents"
readme = "../../README.md"
keywords = ["agent", "llm", "ai", "anthropic", "tools"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
agent-sdk-core = { workspace = true }
agent-sdk-tools = { workspace = true }
agent-sdk-providers = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
url = { workspace = true }
tokio-util = { workspace = true }
html2text = { workspace = true }
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
opentelemetry = { workspace = true, optional = true }

[features]
default = []
otel = ["opentelemetry"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
env_logger = { workspace = true }
tempfile = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
agent-sdk-otel = { workspace = true }

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "tool_round_trip"
path = "examples/tool_round_trip.rs"

[[example]]
name = "mcp_filesystem"
path = "examples/mcp_filesystem.rs"

[[example]]
name = "custom_tool"
path = "examples/custom_tool.rs"

[[example]]
name = "custom_hooks"
path = "examples/custom_hooks.rs"

[[example]]
name = "with_primitive_tools"
path = "examples/with_primitive_tools.rs"

[[example]]
name = "server_turn_summary"
path = "examples/server_turn_summary.rs"

[[example]]
name = "otel"
path = "examples/otel.rs"
required-features = ["otel"]

[lints]
workspace = true
